<resources>
    <string name="app_name">PreguntaDinamica</string>
    <string name="question">question:</string>
    <string name="category">category</string>
    <string name="type">type</string>
    <string name="difficulty">difficulty</string>
    <string name="correct_answer">correct answer</string>
    <string name="incorrect_answer">incorrect answer</string>
    <string name="pregunta_dinamica">Pregunta Dinamica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
